--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     // TODO: register event onkeypress / addEventListener untuk input
     // sehingga saat di input ditekan enter akan menjalankan fungsi fnClickHandler juga
-    input.addEventListener("keydown", (event) => {
+    input.addEventListener("keypress", (event) => {
       if (event.keyCode === 13) {
         let nilaiInput = input.value;
         fnClickHandler(nilaiInput);
